# sthrip

./: .coveragerc  .dockerignore  .env.example  .env.railway.example  .gitignore  ADVANCED_FEATURES_PLAN.md  AGENT_INTEGRATION.md  CLAUDE.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  DEPLOY_SUMMARY.md  Dockerfile  Dockerfile.mpc  EVOLUTION_ROADMAP.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN_REALISTIC.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  Makefile  NEXT_90_DAYS.md  PRIVACY_FEATURES.md  PRIVACY_GUIDE.md  PRODUCTION_ACCEPTANCE.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  README.md  README_IMPLEMENTATION.md  README_TESTING.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2026-04-27.md  SETUP_WALLET.md  TESTING_CHECKLIST.md  TESTING_REAL.md  TESTNET_REPORT.md  TEST_REPORT.md  TODO_REMAINING.md  alembic.ini  demo_mock.py  docker-compose.dev.yml  docker-compose.full.yml  (+6 more)
api/: __init__.py  deps.py  docs.py  helpers.py  main.py  main_v2.py  middleware.py  schemas.py  schemas_channels.py  schemas_conditional.py  schemas_conversion.py  schemas_lending.py  schemas_matchmaking.py  schemas_multi_party.py  schemas_reviews.py  schemas_sla.py  schemas_streams.py  schemas_subscriptions.py  schemas_swap.py  schemas_treasury.py  session_store.py
cli/: __init__.py  bridge_commands.py  main.py  (+1 more)
sdk/: LICENSE  README.md  pyproject.toml
sdk/sthrip/: __init__.py  auth.py  client.py  exceptions.py
sdk/sthrip/cli/: __main__.py  app.py  client.py  config.py  core.py  output.py
sdk/sthrip/cli/commands/: agents.py  balance.py  escrow.py  health.py  keys.py  marketplace.py  me.py  payments.py  register.py  webhooks.py
(+530 files in other folders)
