[project]
name = "sthrip"
version = "0.2.1"
description = "Anonymous payments for AI agents"
requires-python = ">=3.8"
dependencies = ["requests>=2.25"]
license = {text = "MIT"}
readme = "README.md"
keywords = ["payments", "ai", "agents", "monero", "anonymous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://sthrip.dev"
Documentation = "https://sthrip-api-production.up.railway.app/docs"
Repository = "https://github.com/Ageree/sthrip"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
