[project]
name = "sthrip"
version = "0.5.0"
description = "Anonymous payments for AI agents"
requires-python = ">=3.8"
dependencies = ["requests>=2.25", "httpx>=0.25", "typer>=0.9"]
license = {text = "MIT"}
readme = "README.md"
keywords = ["payments", "ai", "agents", "monero", "anonymous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://sthrip.dev"
Documentation = "https://sthrip-api-production.up.railway.app/docs"
Repository = "https://github.com/Ageree/sthrip"

[project.scripts]
sthrip = "sthrip.cli.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
